--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build
+        run: npm run build --base-href /pokemon-trainer/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
