CI(gh-pages): change npm build -> npm build-gh-pages

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build --base-href /pokemon-trainer/
+        run: npm run build-gh-pages
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
